--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,14 @@
     --whitecolor: white;
     --slate:#434455;
     --cloud:#F4F4FD;
+    --green:#31D0AA;
+    --lightslate:#8E8F99;
+    --cornflower:#E7E9FC;
+    --navybluemodal:#2E2F42;
+    --grey:#2E2F42;
+    --dairy:#FCFCFC;
+    
 }
-
 /* CSS RESET */
 p,
 h1,
@@ -58,7 +64,6 @@ body
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    border-bottom: 1px solid var(--cornflower, #E7E9FC);
     background: var(--whitecolor);
 
 }
@@ -100,7 +105,6 @@ body
 .logo-studio-top
 {
     margin-right: 76px;
-
     color: var(--navyblue);
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
@@ -169,16 +173,17 @@ body
     background-color: var(--navyblue);
 }
 
-.hero-h1{
-
+.hero-h1
+{
+    
     padding-top: 188px;
     display: flex;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
-    
-  
+
 }
+
 .hero-button
 {
     display: flex;
@@ -192,7 +197,7 @@ body
 
 .section-grey
 {
-    background-color: #F4F4FD;
+    background-color: var(--cloud);
 }
 
 
@@ -205,7 +210,7 @@ body
     gap: 10px;
 
     cursor: pointer;
-    border: 1px solid var(--cornflower, #E7E9FC);
+    border: 1px solid var(--cornflower);
     color: var(--iriscolor);
     background-color: var(--cloud);
     border-radius: 4px;
@@ -289,7 +294,7 @@ body
 
 .features-list-title 
 {
-    
+
     padding-bottom: 15px;
     color: var(--navyblue);
     font-size: 20px;
@@ -323,7 +328,6 @@ body
 
 .whatwedo-list
 {
-   
     
 }
 
@@ -379,10 +383,15 @@ body
     justify-content: center;
     align-items: center;
 
-
     border-radius: 0px 0px 4px 4px;
-    background: var(--white, #FFF);
+    background: var(--whitecolor);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-header
+{
+    border: 1px solid var(--cornflower);
+    background: var(--whitecolor);
 }
 
 .project-container{
@@ -394,7 +403,6 @@ body
     justify-content: space-between;
     flex-wrap: wrap;
 
-    
 }
 
 .project-type{
@@ -405,11 +413,6 @@ body
     justify-content: center;
     align-items: center;
     margin-top: 48px;
-
-
-    border: 1px solid var(--cornflower, #E7E9FC);
-    background: var(--white, #FFF);
-
 
 }
 
@@ -437,8 +440,8 @@ body
 }
 
 .footer {
-    background-color: var(--navyblue);
 
+    background-color: var(--navyblue);
 }
 
 .logo-studio-bottom {
