--- a/css/styles.css
+++ b/css/styles.css
@@ -50,22 +50,22 @@ body
 }
 
 .container {
-    width: 1440px;
+    width: 1158px;
     margin: 0 auto;  
-    justify-content: center;
-    align-items: center;
-
+    padding:0 15px;
 }
+.header{
 
-.header-container{
-    display: flex;
-    width: 1128px;
-    height: 72px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
+    border: 1px solid var(--cornflower);
     background: var(--whitecolor);
 
+}
+.header-container
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--whitecolor);
 }
 
 .header-navigation{
@@ -82,7 +82,7 @@ body
     font-weight: 700;
     line-height: 60px;
     letter-spacing: 1.12px;
-    width: 496px;
+    margin-bottom: 48px;
 }
 
 .link-logo
@@ -124,7 +124,6 @@ body
 .contacts-top
 {
     display: flex;
-    margin-left: auto;
     gap: 40px;
 }
 
@@ -133,6 +132,8 @@ body
     color: var(--navcolor);
     text-decoration: none;
     font-weight: 500;
+    display: block;
+    padding: 24px 0;
 
 }
 
@@ -157,15 +158,14 @@ body
 .contacts-top .contact-info-top
 {
     color: var(--navcolor);
+    display: block;
     text-decoration: none;
+    padding: 24px 0;
 }
 
 .hero-container
 {
-    width: 1128px;
-    height: 600px;
-    flex-shrink: 0;
-    
+    text-align: center;
 }
 
 .hero-background
@@ -173,26 +173,8 @@ body
     background-color: var(--navyblue);
 }
 
-.hero-h1
-{
-    
-    padding-top: 188px;
-    display: flex;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.hero-button
-{
-    display: flex;
-    padding-top: 48px;
-    padding-bottom: 188px;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-
+.hero{
+    padding: 188px 0;   
 }
 
 .section-grey
@@ -200,14 +182,18 @@ body
     background-color: var(--cloud);
 }
 
+.filters
+{
+    display: flex;
+    gap: 24px;
+    margin-bottom: 72px;
+}
 
 .filter 
 { /*button css*/
 
     display: inline-flex;
     padding: 16px 32px;
-    align-items: flex-start;
-    gap: 10px;
 
     cursor: pointer;
     border: 1px solid var(--cornflower);
@@ -237,15 +223,6 @@ body
     background-color: var(--oceancolor);
 }
 
-.filter-nav
-{
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-    display: flex;
-    margin: 0 auto;
-    padding-bottom:24px ;
-}
 .section-title 
 {
     margin-bottom: 72px;
@@ -265,37 +242,26 @@ body
     padding-bottom: 120px;
 }
 
-.section2
+.section-no-top-padding
 {
     padding-top: 0px;
-    padding-bottom: 120px;
 }
 
 .features-container
 {
-    width: 1128px;
-}
-
-.features-list
-{
-    width: 264px;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 0 auto;
-  
+ 
 }
 
 .features {
 
     display: flex;
-    flex-shrink: 0;
+    gap: 20px;
     
 }
 
 .features-list-title 
 {
-
-    padding-bottom: 15px;
+    margin-bottom: 8px;
     color: var(--navyblue);
     font-size: 20px;
     font-weight: 500;
@@ -310,17 +276,12 @@ body
 }
 
 .whatwedo-container{
-    width: 1128px;
-    flex-shrink: 0;
-    margin: 0 auto;
+
 }
 
 .whatwedo
 {
-    
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
+
     display: flex;
     gap: 24px;
 
@@ -333,14 +294,9 @@ body
 
 .team-list-title 
 {
-    padding-top:32px;
-    display: flex;
-    width: 232px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-
+    margin-top:32px;
+    margin-bottom: 8px;
+  
     color: var(--navyblue);
     font-size: 20px;
     font-weight: 500;
@@ -350,76 +306,59 @@ body
 
 .team-description {
     
-    display: flex;
-    width: 232px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
     color: var(--slate);
-    padding-bottom: 32px;
 }
 
 .team-container {
 
-    width: 1128px;
-    flex-shrink: 0;
-    margin: 0 auto;
 
 }
 
-.team {
+.team 
+{
     display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 24px;
 }
 
 .team-list
 {
     display: inline-flex;
-    padding-bottom: 0px;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    padding-bottom: 32px;
 
     border-radius: 0px 0px 4px 4px;
     background: var(--whitecolor);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-header
+.projects-container
 {
-    border: 1px solid var(--cornflower);
-    background: var(--whitecolor);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.project-container{
-
-    width: 1128px;
-    flex-shrink: 0;
-    margin: 0 auto;
+.projects{
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     flex-wrap: wrap;
-
+    gap: 48px 24px;
 }
 
 .project-type{
 
-    display: inline-flex;
-    padding-bottom: 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 48px;
 
 }
 
+.project-text-wrapper
+{
+    border: 1px solid var(--cornflower);
+    border-top: none;
+    padding: 32px 16px;
+}
+
 .project-list-title {
-    padding-top: 32px;
-    padding-left:16px;
-    align-self: stretch;
 
     color: var(--navyblue);
     font-size: 20px;
@@ -430,17 +369,12 @@ body
 
 .project-description {
 
-    display: flex;
-    padding-left: 16px;
-    align-self: stretch;
     line-height: 1.87;
-
-    padding-bottom: 32px;
     color: var(--slate);
 }
 
 .footer {
-
+    padding: 100px 0;
     background-color: var(--navyblue);
 }
 
@@ -457,15 +391,6 @@ body
 }
 
 .parag-bottom {
-    padding-top: 17.5px;
+    margin-top: 17.5px;
     color: var(--whitecolor);
 } 
-
-.footer-container {
-    padding-top: 101.5px;
-    padding-bottom: 100px;
-    width: 1128px;
-    flex-shrink: 0;
-    margin: 0 auto;
-    align-items: center;
-}
